# symbol-semantic-index

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
data/: NOTICE.md  icon_embeddings.npy  icon_embeddings_index.json  icon_png_manifest.json  icon_png_manifest.jsonl  icon_visual_metadata.jsonl  icon_visual_metadata_v2.jsonl
docs/: agent_selection_protocol.md
examples/: slide-items.json
scripts/: build_local_png_manifest.py  build_rounded_png_manifest.py  fetch_material_symbols.py  generate_icon_metadata.py
src/material_symbol_semantic_index/: __init__.py  catalog.py  cli.py  embedding_selector.py  search.py  selector.py  semantics.py  visual_selector.py
src/material_symbol_semantic_index/api/: __init__.py  main.py  schemas.py
src/material_symbol_semantic_index/api/static/: index.html
tests/: test_api.py  test_selector.py
